# axosyslog

lib/: cfg-lex.l  logqueue-fifo.c  logscheduler.c
lib/filterx/: object-string.c
lib/logmsg/: logmsg.c  logmsg.h
modules/diskq/: logqueue-disk-non-reliable.c  logqueue-disk-non-reliable.h  logqueue-disk-reliable.c  logqueue-disk.c  qdisk.c  qdisk.h
modules/diskq/tests/: test_diskq.c  test_diskq_counters.c  test_diskq_truncate.c  test_logqueue_disk.c
modules/grpc/clickhouse/: CMakeLists.txt  clickhouse-dest-worker.cpp  clickhouse-dest-worker.hpp  clickhouse-dest.cpp  clickhouse-dest.h  clickhouse-dest.hpp  clickhouse-grammar.ym  clickhouse-parser.c  clickhouse-plugin.c
modules/grpc/clickhouse/filterx/: object-protobuf-message.cpp  object-protobuf.h
modules/grpc/common/: CMakeLists.txt  Makefile.am
modules/grpc/common/filterx/: CMakeLists.txt  Makefile.am  grpc-common-plugins.c  grpc-filterx.c
modules/grpc/common/filterx/protobuf-message/: CMakeLists.txt  Makefile.am  object-protobuf-message.hpp  protobuf-field.cpp  protobuf-field.hpp  protobuf-message.cpp  protobuf-message.h  protobuf-message.hpp  schema.cpp  schema.hpp
modules/grpc/common/filterx/protobuf-message/tests/: CMakeLists.txt  test_protobuf_message.c  test_schema.cpp
modules/grpc/common/schema/: CMakeLists.txt  Makefile.am  schema.cpp  schema.hpp
modules/grpc/common/schema/tests/: CMakeLists.txt  Makefile.am  test_schema.cpp
modules/grpc/otel/filterx/: object-otel-base.cpp
