grpc_schema_sources = \
  modules/grpc/common/schema/schema.hpp \
  modules/grpc/common/schema/schema.cpp \
  modules/grpc/common/schema/grpc-schema.hpp \
  modules/grpc/common/schema/grpc-schema.cpp

EXTRA_DIST +=  modules/grpc/common/schema/CMakeLists.txt

include modules/grpc/common/schema/tests/Makefile.am
